--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -6,10 +6,18 @@
 <!--Head Code-->
 <head>
 <title>Blair's Housebrewed Coffee</title>
+  <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
+  <link rel="stylesheet" href="CSS/style.css"/>
+  <script> src="AngelsCoffeeStart.js"</script>
 </head>
 <!--Body Code-->
 <body>
-<div><button id="PlayButton">Play</button></div>
-</body>
+  <a href="pages/Game.html">
+<div class="PlayButtonDIV"><button  id="PlayButton">Play</button></div>
+</a>
 
+<a href="pages/instructions.html">
+<div><button onclick="" id="Instructions">Instructions</button></div>
+</a>
+</body>
 </html>
