--- a/.vscode/pages/instructions.html
+++ b/.vscode/pages/instructions.html
@@ -1,1 +1,12 @@
-<h1> Blair's Housebrewed Coffee Instructions</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Blair's Housebrewed Coffee</title>
+  <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+<h1> Angel's Housebrewed Coffee Instructions</h1>
+
+</body>
+</html>
