--- a/.vscode/pages/Sources.html
+++ b/.vscode/pages/Sources.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Angels's Housebrewed Coffee Instructions</title>
+  <title>Angels's Housebrewed Coffee Sources
+  </title>
   <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<h1> Angel's Housebrewed Coffee Instructions</h1>
+<h1> Angel's Housebrewed Coffee Sources</h1>
 
 </body>
 </html>
