--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -8,16 +8,22 @@
 <title>Blair's Housebrewed Coffee</title>
   <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
   <link rel="stylesheet" href="CSS/style.css"/>
-  <script> src="AngelsCoffeeStart.js"</script>
+  <script src="AngelsCoffeeStart.js" defer></script>
 </head>
 <!--Body Code-->
 <body>
+  <div class="AngelsLOGO">
+  <img src="Images/AngelsLOGO.png" img id="AngelsLOGO">
+</div>
   <a href="pages/Game.html">
 <div class="PlayButtonDIV"><button  id="PlayButton">Play</button></div>
 </a>
 
 <a href="pages/instructions.html">
-<div><button onclick="" id="Instructions">Instructions</button></div>
+<div class="PlayButtonDIV"><button id="Instructions">Instructions</button></div>
+</a>
+<a href="pages/Sources.html">
+  <div class="PlayButtonDIV"><button id="Sources">Sources</button></div>
 </a>
 </body>
 </html>
