--- a/.vscode/pages/Game.html
+++ b/.vscode/pages/Game.html
@@ -3,11 +3,20 @@
 <head>
   <title>Angels's Housebrewed Coffee</title>
   <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
-  <link rel="stylesheet" href="style.css"/>
-  <script src="Angels" defer></script>
+  <link rel="stylesheet" href="../CSS/style.css"/>
+  <script src="../AngelsCoffeeGameScript.js" defer></script>
 </head>
 <body>
-    <div class="ToppingButtonDIV"><button id="WhippedCream">Instructions</button></div>
-    </a>
+    <div class="ToppingButtonDIV" draggable="true"><input id="WhippedCream" type="image" src="../Images/WhippedCreamImage.webp" ></input></div>
+    <div class="ToppingButtonDIV" draggable="true"><input id="Cinnamon" type="image" src="../Images/Cinnamon.png"></input></div>
+    <div class="ToppingButtonDIV" draggable="true"><input id="ChocaloteChips" type="image" src="../Images/ChocaloteChip.png"></input></div>
+    <div class="ToppingButtonDIV" draggable="true"><input id="Wafers" type="image" src="../Images/WaferImg.png"></input></div>
+    <div class="ToppingButtonDIV" draggable="true"><input id="Nuts" type="image" src="../Images/Nuts.png"></input></div>
+
+    <!--User Cup Button-->
+    <div class="UserCup" draggable="true"><input id="UserCupInput" type="image" src="../Images/EmptyCup.png" ></input></div>
+    <div class="Layers" hidden><input id="Layer1" type="image" src="../Images/EmptyCup.png" ondrop=></input></div>
+    <div class="Layers" hidden><input id="Layer2" type="image" src="../Images/EmptyCup.png"></input></div>
+    <div class="Layers" hidden><input id="Layer3" type="image"  src="../Images/EmptyCup.png"></input></div>
 </body>
 </html>
