--- a/.vscode/pages/instructions.html
+++ b/.vscode/pages/instructions.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 <h1> Angel's Housebrewed Coffee Instructions</h1>
+<p id="IntroductoryParagraph">Welcome to Angel's Housebrewed Coffee's training! Here you will find everything you need to be come the best Barista you can be!
+</p>
+<h2>Controls</h2>
+<p id="ControlsParagraph">The game functionss very simply, with very little controls. </p>
+
 
 </body>
 </html>
