--- a/.vscode/pages/Sources.html
+++ b/.vscode/pages/Sources.html
@@ -3,7 +3,7 @@
 <head>
   <title>Angels's Housebrewed Coffee Sources
   </title>
-  <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
+  <link rel="icon" type="image/png" href="images/logos/AngelsLOGO" />
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
