--- a/.vscode/pages/instructions.html
+++ b/.vscode/pages/instructions.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Angels's Housebrewed Coffee Instructions</title>
-  <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
+  <link rel="icon" type="image/png" href="images/AngelsLOGO" />
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
