--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -6,7 +6,7 @@
 <!--Head Code-->
 <head>
 <title>Blair's Housebrewed Coffee</title>
-  <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
+  <link rel="icon" type="image/png" href="images/AngelsLOGO" />
   <link rel="stylesheet" href="CSS/style.css"/>
   <script src="AngelsCoffeeStart.js" defer></script>
 </head>
