--- a/.vscode/pages/Game.html
+++ b/.vscode/pages/Game.html
@@ -2,21 +2,22 @@
 <html>
 <head>
   <title>Angels's Housebrewed Coffee</title>
-  <link rel="icon" type="image/png" href="images/logos/Nana_Logo.jpg" />
+  <link rel="icon" type="image/png" href="../Images/AngelsLOGO.png" />
   <link rel="stylesheet" href="../CSS/style.css"/>
   <script src="../AngelsCoffeeGameScript.js" defer></script>
 </head>
 <body>
-    <div class="ToppingButtonDIV" draggable="true"><input id="WhippedCream" type="image" src="../Images/WhippedCreamImage.webp" ></input></div>
-    <div class="ToppingButtonDIV" draggable="true"><input id="Cinnamon" type="image" src="../Images/Cinnamon.png"></input></div>
-    <div class="ToppingButtonDIV" draggable="true"><input id="ChocaloteChips" type="image" src="../Images/ChocaloteChip.png"></input></div>
-    <div class="ToppingButtonDIV" draggable="true"><input id="Wafers" type="image" src="../Images/WaferImg.png"></input></div>
-    <div class="ToppingButtonDIV" draggable="true"><input id="Nuts" type="image" src="../Images/Nuts.png"></input></div>
+    <div class="WhippedCreamDIV" draggable="true"><input id="WhippedCream" type="image" src="../Images/WhippedCreamImage.webp" ></input></div>
+    <div class="CinnamonDIV" draggable="true"><input id="Cinnamon" type="image" src="../Images/Cinnamon.png"></input></div>
+    <div class="ChocaloteChipDIV" draggable="true"><input id="ChocaloteChips" type="image" src="../Images/ChocaloteChip.png"></input></div>
+    <div class="WaferDIV" draggable="true"><input id="Wafers" type="image" src="../Images/WaferImg.png"></input></div>
+    <div class="NutsDIV" draggable="true"><input id="Nuts" type="image" src="../Images/Nuts.png"></input></div>
 
     <!--User Cup Button-->
     <div class="UserCup" draggable="true"><input id="UserCupInput" type="image" src="../Images/EmptyCup.png" ></input></div>
-    <div class="Layers" hidden><input id="Layer1" type="image" src="../Images/EmptyCup.png" ondrop=></input></div>
-    <div class="Layers" hidden><input id="Layer2" type="image" src="../Images/EmptyCup.png"></input></div>
-    <div class="Layers" hidden><input id="Layer3" type="image"  src="../Images/EmptyCup.png"></input></div>
+    <div class="DropTargets"></div>
+    <div class="Layer" hidden><input id="Layer1ID" type="image" src="../Images/EmptyCup.png" ></input></div>
+    <div class="Layer" hidden><input id="Layer2ID" type="image" src="../Images/EmptyCup.png"></input></div>
+    <div class="Layer" hidden><input id="Layer3ID" type="image"  src="../Images/EmptyCup.png"></input></div>
 </body>
 </html>
