--- a/pages/Sources.html
+++ b/pages/Sources.html
@@ -16,6 +16,9 @@
 <br>
 <a href="https://pngtree.com/freepng/cartoon-style-cinnamon-kitchen-seasoning_6046533.html">https://pngtree.com/freepng/cartoon-style-cinnamon-kitchen-seasoning_6046533.html</a>
 <a href="https://www.barry-callebaut.com/en-GB/artisans/stewart-and-arnold/products/great-british-dark-chocolate-chips/CHD-DR-75X39SA-513">https://www.barry-callebaut.com/en-GB/artisans/stewart-and-arnold/products/great-british-dark-chocolate-chips/CHD-DR-75X39SA-513</a>
+<br>
+<a href="https://www.clker.com/clipart-check-mark-button.html">https://www.clker.com/clipart-check-mark-button.html</a>
+<br>
 
 </body>
 </html>
