Before changing "1's" to 0

--- a/pages/Game.html
+++ b/pages/Game.html
@@ -7,7 +7,7 @@
   <script src="../AngelsCoffeeGameScript.js" defer></script>
 </head>
 <body>
-  <button type="image" src="../Images/WhippedCreamImage.webp" id="WhippedCream"> </button>
+  <button img src="../Images/WhippedCreamImage.webp" id="WhippedCream"></button>
   <button type="image" src="../Images/ColdBrew.png" id="ColdBrew" ></button>
   <button type="image" src="../Images/Cream.png" id="Cream" ></button>
   <button type="image" src="../Images/ChocaloteChip.png" id="ChocaloteChip" ></button>
@@ -15,9 +15,10 @@
   <button type="image" src="../Images/Nuts.png" id="Nuts" ></button>
   <button type="image" src="../Images/WaferImg.png" id="Wafer" ></button>
   <button type="image" src="../Images/Cinnamon.png" id="Cinnamon" ></button>
-  <img id="Layer1" src="../Images/Transperant.png">Layer1</img>
-  <img id="Layer2" src="../Images/Transperant.png">Layer2</img>
-  <img id="Layer3" src="../Images/Cinnamon.png">Layer3</img>
+  <input id="Layer1" type="image" img src="../Images/Cinnamon.png">Layer1</img>
+  <input id="Layer2" type="image" img src="../Images/Cinnamon.png">Layer2</img>
+  <input id="Layer3"  type="image" src="../Images/Cinnamon.png">Layer3</img>
+
 
 
 
