--- a/pages/Game.html
+++ b/pages/Game.html
@@ -7,25 +7,30 @@
   <script src="../AngelsCoffeeGameScript.js" defer></script>
 </head>
 <body>
-  <button img src="../Images/WhippedCreamImage.webp" id="WhippedCream"></button>
-  <button type="image" src="../Images/ColdBrew.png" id="ColdBrew" ></button>
-  <button type="image" src="../Images/Cream.png" id="Cream" ></button>
-  <button type="image" src="../Images/ChocaloteChip.png" id="ChocaloteChip" ></button>
-  <button type="image" src="../Images/Nutmeg.png" id="Nutmeg" ></button>
-  <button type="image" src="../Images/Nuts.png" id="Nuts" ></button>
-  <button type="image" src="../Images/WaferImg.png" id="Wafer" ></button>
-  <button type="image" src="../Images/Cinnamon.png" id="Cinnamon" ></button>
-  <input id="Layer1" type="image" img src="../Images/Cinnamon.png">Layer1</img>
-  <input id="Layer2" type="image" img src="../Images/Cinnamon.png">Layer2</img>
-  <input id="Layer3"  type="image" src="../Images/Cinnamon.png">Layer3</img>
+  <div id="Score">Score</div>
+  <div id="NofGuests">Guests</div>
+  <div id="Order">Order</div>
+  <button type="image"><img src="../Images/WhippedCreamImage.webp" id="WhippedCream"></button>
+  <button type="image"><img src="../Images/ColdBrew.png" id="ColdBrew"></button>
+  <button type="image"><img src="../Images/Cream.png" id="Cream" ></button>
+  <button type="image"><img src="../Images/ChocaloteChip.png" id="ChocaloteChip" ></button>
+  <button type="image"><img src="../Images/Nutmeg.png" id="Nutmeg" ></button>
+  <button type="image"><img src="../Images/Nuts.png" id="Nuts" ></button>
+  <button type="image"><img src="../Images/WaferImg.png" id="Wafer" ></button>
+  <button type="image"><img src="../Images/Cinnamon.png" id="Cinnamon" ></button>
 
 
 
+<div class="FoodChecker"><button type="image"><img src="../Images/Checker.png" id="Checker" ></button</div>
+  <div class="FoodChecker"><button type="image"><img src="../Images/X Button.png" id="ResetButton"></button></div>
 
+<div class="Layers">
+  <input id="Layer1" type="image" img src="../Images/Transperant.png">Layer1</img>
+  <input id="Layer2" type="image" img src="../Images/Transperant.png">Layer2</img>
+  <input id="Layer3"  type="image" src="../Images/Transperant.png">Layer3</img>
+</div>
 
-  <div class="GuestDisplay" id="Guest"><a href="../Images/Guest.png" hidden></a></div>
-  <div class="FoodChecker"><input id="Checker" type="image" src="../Images/Checker.png"></input</div>
-  <div class="Reset"><input id="ResetButton" type="image" src="../Images/X Button.png"></input</div>
+  <div class="GuestDisplay" id="Guest"><a href="../Images/Guest.png" ></a></div>
 
 </body>
 </html>
