--- a/pages/instructions.html
+++ b/pages/instructions.html
@@ -3,15 +3,51 @@
 <head>
   <title>Angels's Housebrewed Coffee Instructions</title>
   <link rel="icon" type="image/png" href="images/AngelsLOGO" />
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="../CSS/style.css"/>
 </head>
 <body>
 <h1> Angel's Housebrewed Coffee Instructions</h1>
 <p id="IntroductoryParagraph">Welcome to Angel's Housebrewed Coffee's training! Here you will find everything you need to be come the best Barista you can be!
 </p>
 <h2>Controls</h2>
-<p id="ControlsParagraph">The game functionss very simply, with very little controls. </p>
+<p id="ControlsParagraph">The game functions very simply, with very little controls. </p>
+<p id="ExplanationParagraph">You have a order function, score and Number of Guests function at the top, these represent:</p>
+<ul>
+  <li>The order function represents what order you will have to make as the barista. If you correctly make the order, the order will reset, and the score function will go up. If the order is wrong however, the score function doesn't change, and a new order appears. </li>
+  <br>
+  <li>The score function represents how many orders you have correctly served out. </li><br>
+  <li>The Number of Guests representes how many guests you have served. </li>
+  <br>
+</ul>
 
+<p id="ToppingExplantion">There are a total of 8 toppings in the Coffee Shop, these are: </p>
+<ul>
+  <li>ColdBrew</li>
+  <img src="../Images/ColdBrew.png" id="ColdBrew">
+  <br>
+  <li>Cream</li>
+  <img src="../Images/Cream.png" id="Cream">
+  <br>
+  <li>WhippedCream</li>
+  <img src="../Images/WhippedCream.webp" id="WhippedCream">
+  <br>
+  <li>Wafer</li>
+  <img src="../Images/WaferImg.png" id="Wafer">
+  <br>
+  <li>Nuts</li>
+  <img src="../Images/Nuts.png" id="Nuts">
+  <br>
+  <li>Nutmeg</li>
+  <img src="../Images/Nutmeg.png" id="Nutmeg">
+  <br>
+  <li>ChocaloteChip</li>
+  <img src="../Images/ChocaloteChip.png" id="ChocaloteChip">
+  <br>
+  <li>Cinnamon</li>
+  <img src="../Images/Cinnamon.png" id="Cinnamon">
+  <br>
+</ul>
 
+<p>Happy serving!</p>
 </body>
 </html>
