--- a/pages/Sources.html
+++ b/pages/Sources.html
@@ -4,7 +4,7 @@
   <title>Angels's Housebrewed Coffee Sources
   </title>
   <link rel="icon" type="image/png" href="images/logos/AngelsLOGO" />
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="../CSS/style.css"/>
 </head>
 <body>
 <h1> Angel's Housebrewed Coffee Sources</h1>
